--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -16,3 +16,9 @@ Quarto enables you to weave together content and executable code into a finished
 ## Running Code
 
 When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+
+Import
+
+```{r}
+read_excel(here::here("data/raw/water_resources_east_africa_Bentono.xlsx"))
+```
