Website for FAO introduced

--- a/docs/references1.bib
+++ b/docs/references1.bib
@@ -14,3 +14,17 @@
    volume = {23},
    year = {2021},
 }
+
+@article{Gunda2019,
+   abstract = {The study of water resources has evolved from a focus on physical availability to also include social factors such as governance. Increased understanding of diverse physical and social influences has led to a more comprehensive notion of water security, which is defined as an adequate supply of clean freshwater to support humans and ecosystems at all times. Despite the clear recognition that water security encompasses quantity, quality, and societal considerations, discussions often focus on only one or two of these aspects. This practice masks critical ways in which water quality issues intersect with water quantity issues as well as social factors for many water security decisions. This review paper highlights the growing call to consider water security in a more integrated manner by underscoring the complex interactions among water quantity, water quality, and society (i.e., the quantity-quality-society nexus) for six common water management practices. These descriptions highlight the need to understand the tradeoffs between water quantity and water quality associated with water management decisions, especially as freshwater scarcity increases. We conclude with a discussion of emerging opportunities in sociohydrological research and data analysis that have the potential to improve current understanding and management of the quantity-quality-society nexus of water security.},
+   author = {Thushara Gunda and David Hess and George M. Hornberger and Scott Worland},
+   doi = {10.1016/J.WASEC.2018.100022},
+   issn = {2468-3124},
+   journal = {Water Security},
+   month = {3},
+   pages = {100022},
+   publisher = {Elsevier},
+   title = {Water security in practice: The quantity-quality-society nexus},
+   volume = {6},
+   year = {2019},
+}
