--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -41,7 +41,7 @@ citation_style: author-year
 
 # Introduction
 
-Water security mainly refers to issues pertaining to quality, reliability, quantity, environmental provisioning, and equitable access to water supplies. According to the working definition of UN Water, water security can be defined as: “The capacity of a population to safeguard sustainable access to adequate quantities and acceptable quality of water for sustaining livelihoods, human well-being, and socio-economic development, for ensuring protection against water-borne pollution and water related disasters, and for preserving ecosystems in a climate of peace and political stability”.
+Water security mainly refers to issues pertaining to quality, reliability, quantity, environmental provisioning, and equitable access to water supplies. According to the working definition of UN Water, water security can be defined as: “The capacity of a population to safeguard sustainable access to adequate quantities and acceptable quality of water for sustaining livelihoods, human well-being, and socio-economic development, for ensuring protection against water-borne pollution and water related disasters, and for preserving ecosystems in a climate of peace and political stability” [@Gunda2019].
 
 Africa has a combined population of over 1 billion people and represents about 17% of the global population. Its water resources are estimated to be nearly 9% of the world’s freshwater resources [@Haile2020]. However, these resources are unevenly distributed, with the most water-rich countries in Central and Western Africa holding 54% of the continent’s total resources and the 27 most water-poor countries holding only 7%. In the Eastern Africa region, countries are characterised by varying degrees of water scarcity as given by @Mapani2019.
 
@@ -49,7 +49,7 @@ In 2004, the African Union (AU) launched the Africa Water Vision for 2025, which
 
 # Methods
 
-Data was collected from the website of the World Food and Agriculture Organisation (FAO), stored on an excel workbook, then impoted to R for cleaning and analysis to determine the exsiting renewable water resources in the region, water withdrawals, and access.
+Data was collected from the \[FAO AQUASTAT Dissemination System\]([https://data.apps.fao.org/aquastat/?lang=en&share=f-8ef986ca-479a-4fde-a237-8f5b33572b11](#0){style="font-size: 11.4pt;"}) of the World Food and Agriculture Organisation, stored on an excel workbook, then impoted to R for cleaning and analysis to determine the exsiting renewable water resources in the region, water withdrawals, and access.
 
 ***Data importation and cleaning***
 
